update json files and input for search

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <nav class="main-nav">
         <img class="logo" ng-src="./img/logos/earlogo1.svg"/>
         <div >
-            <a ui-sref="home" class="link">Home</a>
+            <a href="#!/jackets" class="link">Home</a>
         </div>
     </nav>
 
