--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Ecommerce Site</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
         <link rel="stylesheet" href="./build/css/main.css">
     </head>
     <body>
 
     <nav class="main-nav">
-        <img class="logo" ng-src="./img/logos/earlogo1.svg"/>
+        <i class="material-icons">menu</i>
         <div >
             <a href="#!/jackets" class="link">Home</a>
         </div>
