created header component

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,8 @@
     </head>
     <body>
 
-    <nav class="main-nav">
-        <i class="material-icons">menu</i>
-        <div >
-            <a href="#!/jackets" class="link">Home</a>
-        </div>
-    </nav>
+    
+    <header-component></header-component>
 
     <!-- NG-VIEW FOR ROUTING -->
     <div ng-view></div>
@@ -35,9 +31,10 @@
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
     <script src="./jacketComponent/jackets.module.js"></script>
+    <script src="./jacketComponent/jackets.component.js"></script>
     <script src="./jacketDetailComponent/jacketDetail.module.js"></script>
     <script src="./jacketDetailComponent/jacketDetail.component.js"></script>
-    <script src="./jacketComponent/jackets.component.js"></script>
+    <script src="./headerComponent/header.component.js"></script>
 
     </body>
 </html>
