created title and footer components with styling

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,14 @@
     </head>
     <body>
 
-    
+
     <header-component></header-component>
+    <title-component></title-component>
 
     <!-- NG-VIEW FOR ROUTING -->
     <div ng-view></div>
 
-
+    <footer-component></footer-component>
 
     <!-- ANGULAR, ANGULAR ANIMATE, JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/core.js"></script>
@@ -35,6 +36,8 @@
     <script src="./jacketDetailComponent/jacketDetail.module.js"></script>
     <script src="./jacketDetailComponent/jacketDetail.component.js"></script>
     <script src="./headerComponent/header.component.js"></script>
+    <script src="./titleComponent/title.component.js"></script>
+    <script src="./footerComponent/footer.component.js"></script>
 
     </body>
 </html>
