worked on sidemenu for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
     <header-component></header-component>
     <title-component></title-component>
+    <side-menu-component></side-menu-component>
 
     <!-- NG-VIEW FOR ROUTING -->
     <div ng-view></div>
@@ -38,6 +39,7 @@
     <script src="./headerComponent/header.component.js"></script>
     <script src="./titleComponent/title.component.js"></script>
     <script src="./footerComponent/footer.component.js"></script>
+    <script src="./sideMenuComponent/sideMenu.component.js"></script>
 
     </body>
 </html>
