added animations to mobile sidemenu

--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,22 @@
     </head>
     <body>
 
-
+    <!-- HEADER COMPONENT -->
     <header-component></header-component>
+    <!-- TITLE COMPONENT -->
     <title-component></title-component>
-    <side-menu-component></side-menu-component>
 
     <!-- NG-VIEW FOR ROUTING -->
     <div ng-view></div>
 
+    <!-- FOOTER COMPONENT -->
     <footer-component></footer-component>
+
+
 
     <!-- ANGULAR, ANGULAR ANIMATE, JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/core.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-animate.js"></script>
     <script src="https://use.typekit.net/hwj1xwz.js"></script>
@@ -39,7 +41,6 @@
     <script src="./headerComponent/header.component.js"></script>
     <script src="./titleComponent/title.component.js"></script>
     <script src="./footerComponent/footer.component.js"></script>
-    <script src="./sideMenuComponent/sideMenu.component.js"></script>
 
     </body>
 </html>
