added cart component and updated routing

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
     <script src="./headerComponent/header.component.js"></script>
     <script src="./titleComponent/title.component.js"></script>
     <script src="./footerComponent/footer.component.js"></script>
+    <script src="./cartComponent/cart.module.js"></script>
+    <script src="./cartComponent/cart.component.js"></script>
+
 
     </body>
 </html>
