worked on review section component

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,8 @@
     <script src="./footerComponent/footer.component.js"></script>
     <script src="./cartComponent/cart.module.js"></script>
     <script src="./cartComponent/cart.component.js"></script>
+    <script src="./productReviewsComponent/productReviews.component.js"></script>
+
 
 
     </body>
