--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,11 @@
     <!-- FOOTER COMPONENT -->
     <footer-component></footer-component>
 
+    <to-the-top></to-the-top>
 
 
     <!-- ANGULAR, ANGULAR ANIMATE, JQUERY -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/core.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-animate.js"></script>
@@ -35,6 +36,9 @@
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
     <script src="./service/service.js"></script>
+
+    <!-- DIRECTIVES, JS FILES -->
+    <script src="./directives/toTheTop.directive.js"></script>
 
     <!-- COMPONENTS, MODULES JS FILES -->
     <script src="./jacketComponent/jackets.module.js"></script>
@@ -47,6 +51,8 @@
     <script src="./cartComponent/cart.module.js"></script>
     <script src="./cartComponent/cart.component.js"></script>
     <script src="./productReviewsComponent/productReviews.component.js"></script>
+
+
 
 
 
