added some animations and email component

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
         <meta charset="utf-8">
         <title>Ecommerce Site</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+        rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+
+        <!-- MAIN STYLE SHEET -->
         <link rel="stylesheet" href="./build/css/main.css">
     </head>
     <body>
@@ -21,7 +25,6 @@
     <!-- FOOTER COMPONENT -->
     <footer-component></footer-component>
 
-    <to-the-top></to-the-top>
 
 
     <!-- ANGULAR, ANGULAR ANIMATE, JQUERY -->
@@ -38,7 +41,7 @@
     <script src="./service/service.js"></script>
 
     <!-- DIRECTIVES, JS FILES -->
-    <script src="./directives/toTheTop.directive.js"></script>
+    <script src="./directives/toTheTop/toTheTop.directive.js"></script>
 
     <!-- COMPONENTS, MODULES JS FILES -->
     <script src="./jacketComponent/jackets.module.js"></script>
@@ -50,10 +53,9 @@
     <script src="./footerComponent/footer.component.js"></script>
     <script src="./cartComponent/cart.module.js"></script>
     <script src="./cartComponent/cart.component.js"></script>
+    <script src="./socialComponent/social.component.js"></script>
+    <script src="./emailInputComponent/emailInput.component.js"></script>
     <script src="./productReviewsComponent/productReviews.component.js"></script>
-
-
-
 
 
     </body>
