added desktop nav component and functionality directive for desktop nav

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
 
     <!-- DIRECTIVES, JS FILES -->
     <script src="./directives/toTheTop/toTheTop.directive.js"></script>
+    <script src="./directives/menuClick/menuClick.directive.js"></script>
 
     <!-- COMPONENTS, MODULES JS FILES -->
     <script src="./jacketComponent/jackets.module.js"></script>
@@ -56,6 +57,7 @@
     <script src="./socialComponent/social.component.js"></script>
     <script src="./emailInputComponent/emailInput.component.js"></script>
     <script src="./productReviewsComponent/productReviews.component.js"></script>
+    <script src="./mainNavDesktopComponent/mainNavDesktop.component.js"></script>
 
 
     </body>
