worked on email modal design and functionality

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
     <!-- DIRECTIVES, JS FILES -->
     <script src="./directives/toTheTop/toTheTop.directive.js"></script>
     <script src="./directives/menuClick/menuClick.directive.js"></script>
+    <script src="./directives/emailModal/emailModal.directive.js"></script>
 
     <!-- COMPONENTS, MODULES JS FILES -->
     <script src="./components/jacketComponent/jackets.module.js"></script>
