completed functionality of email thank you modal

--- a/public/directives/emailModal/emailModal.template.html
+++ b/public/directives/emailModal/emailModal.template.html
@@ -1,5 +1,6 @@
 <section class="email-modal">
     <div class="box">
+        <i class="material-icons modal-close" ng-click="$ctrl.closeModal()">close</i>
         <h1>Thank you for signing up!</h1>
         <i class="material-icons">change_history</i>
         <h4>Konsumer</h4>
