adding updated server files and refactored code

--- a/public/directives/emailModal/emailModal.template.html
+++ b/public/directives/emailModal/emailModal.template.html
@@ -2,6 +2,7 @@
     <div class="box" ng-class="{ 'box-active': $ctrl.isActive }">
         <i class="material-icons modal-close" ng-click="$ctrl.closeModal()">close</i>
         <h1>Thank you for signing up!</h1>
+        <p> {{ $ctrl.emailInfo }} </p>
         <i class="material-icons">change_history</i>
         <h4>Konsumer</h4>
     </div>
