add favicon logo and updated about icon section css

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Ecommerce Site</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <link rel="icon" href="./img/logos/trilogo.png" type="image/gig" sizes="24x24">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
