initial work on custom sort menu, added css styling, and directive

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <!-- DIRECTIVES, JS FILES -->
     <script src="./directives/toTheTop/toTheTop.directive.js"></script>
     <script src="./directives/menuClick/menuClick.directive.js"></script>
+    <script src="./directives/sortClick/sortClick.directive.js"></script>
     <script src="./directives/emailModal/emailModal.directive.js"></script>
 
     <!-- COMPONENTS, MODULES JS FILES -->
