added contact route and page setup

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,8 @@
     <script src="./components/cartComponent/cart.component.js"></script>
     <script src="./components/loginComponent/login.module.js"></script>
     <script src="./components/loginComponent/login.component.js"></script>
+    <script src="./components/contactComponent/contact.module.js"></script>
+    <script src="./components/contactComponent/contact.component.js"></script>
     <script src="./components/createAccountComponent/createAccount.module.js"></script>
     <script src="./components/createAccountComponent/createAccount.component.js"></script>
     <script src="./components/aboutComponent/about.module.js"></script>
